# bridge-portfolio

./: .gitignore
backend/: .env  alembic.ini  bridge_portfolio.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260709_2033_196b98f5a128_initial_schema_complete.py
backend/app/: main.py
backend/app/infrastructure/database/: models.py  seed.py  session.py
backend/app/infrastructure/database/repositories/: base.py  projet_repository.py
backend/app/interfaces/api/v1/: config_admin.py  dependencies.py
backend/app/interfaces/api/v1/routes/: agent.py  articles.py  auth.py  bridgescan.py  config_public.py  health.py  liens_sociaux.py  messages.py  projets.py  seed_trigger.py  seo.py  services.py  technologies.py  temoignages.py  upload.py
backend/app/interfaces/api/v1/schemas/: article.py  auth.py  message.py  projet.py  service.py  temoignage.py
backend/app/interfaces/web/: routes.py
backend/app/interfaces/web/templates/admin/: article_form.html  articles.html  base_admin.html  dashboard.html  liens_sociaux.html  login.html  medias.html  messages.html  parametres.html  projet_form.html  projets.html  services.html  technologies.html  temoignages.html  utilisateurs.html
backend/app/interfaces/web/templates/public/: 404.html  accueil.html  article_detail.html  base.html  blog.html  contact.html  projet_detail.html  projets.html  services.html  test-projets.html
