[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-portfolio"
version = "4.0.0"
description = "Portfolio arcade de Vainqueur Kalema - Bridge Afrika"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Vainqueur Kalema", email = "vainqueurkalema035@gmail.com"}
]
keywords = ["portfolio", "fastapi", "arcade", "bridge-afrika"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "fastapi[all]==0.115.*",
    "uvicorn[standard]",
    "sqlalchemy==2.0.*",
    "alembic==1.13.*",
    "psycopg2-binary",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic[email]",
    "python-dotenv",
    "weasyprint",
    "qrcode",
    "pillow",
    "jinja2",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.11",
]

[project.scripts]
bridge-portfolio = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true